# meni

./: .gitignore  README.md  app.py  eventbus.py  flake.nix  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  shell.nix  theme.py  utils.py
.github/workflows/: main.yml
assets/: assets.qrc
meni/: __main__.py  app.py  theme.py
meni.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
meni/ui/: common.py  filestable.py  propertyrowwithapply.py  searchinput.py  tagrow.py
meni/ui/docks/: browser.py  collectionproperties.py  fileproperties.py  viewer.py
meni/ui/menus/: filecontextmenu.py  menusettings.py
meni/ui/windows/: importdialog.py  mainwindow.py  welcome.py
model/: model.py
nix/: sources.json
ui/: collectioninfo.py  common.py  filecontextmenu.py  fileinfo.py  filestable.py  iconlabel.py  importdialog.py  labelist.py  labeltree.py  mainwindow.py  propertyrowwithapply.py  tagrow.py  viewer.py  welcome.py
ui/docks/: browser.py  collectioninfo.py  collectionproperties.py  fileproperties.py  filters.py  properties.py  viewer.py
ui/menus/: filecontextmenu.py
ui/toolbars/: maintoolbar.py
ui/windows/: importdialog.py  mainwindow.py  welcome.py
