[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meni"
dynamic = ["version"]
description = "Software to manage a library of 3d files (stl)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Diego Pereyra", email = "diego@diegopereyra.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
]
dependencies = [
    "jsonpickle",
    "matplotlib",
    "numpy-stl",
    "pyside6",
    "qt-material",
    "qtawesome",
    "vtkplotlib",
]

[project.urls]
Homepage = "https://github.com/diesphink/meni"

[tool.hatch.version]
path = "meni/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/meni",
]
